# EfficientSPADetection

./: LICENSE  README.md  antiPatternDetection24feb2025.py  calculateFeatures5feb2025.py  calculateServiceFeatures5feb2025.py  claculateRequestFeatures5feb2025.py  preprocess30oct2024.py  rootCauseAnalysis.py  semi-supervised-learning-17jun2025-blob.py  semi-supervised-learning-17jun2025-est.py  unsupervisedClassification11Feb2025-Blob.py  unsupervisedClassification11Feb2025.py
SPAInjection/: 1  readMe  traceSmall.sh  tracing.sh
SPAInjection/blob/blob-hometimeline-to-poststorage/: changes.txt
SPAInjection/blob/blob-hometimeline-to-poststorage/socialNetwork/: Dockerfile  social_network.thrift
SPAInjection/blob/blob-write-read-Usertime-to-poststorage/: PostStorageHandler.h  UserTimelineHandler.h
SPAInjection/blob/blob-write-read-hometimeline-to-poststorage/: social_network.thrift
SPAInjection/blob/blob-write-read-hometimeline-to-poststorage/src/PostStorageSerivce/: CMakeLists.txt  PostStorageHandler.h  PostStorageService.cpp
SPAInjection/blob/blob-writeUsertime-to-poststorage/: PostStorageHandler.h  UserTimelineHandler.h  old-PostStorageHandler.h
SPAInjection/empty-semi-truck-1/: ComposePostHandler.h
SPAInjection/empty-semi-truck-2/: UserTimelineHandler.h
kernelEventMethod/: SPACharacterization.py  analysis.py  dataAnalysis-final.py  lstm_model-final.py  merge_files.py  modelPreparation.py  ndSlopCalculate.py  nd_slop_model.py  preprocessing.py  preprocesswithTraceID.py  readMe  traceAnalysis-19Sep2024.py  xgboost_model_final.py
(+8 files in other folders)
